--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
   <script type="module" src="/build/fire-rtc.esm.js"></script>
   <script nomodule src="/build/fire-rtc.js"></script>
@@ -12,8 +13,8 @@
 <body>
 
   <fire-webrtc
-    src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4"
-    poster="https://sample-videos.com/img/Sample-png-image-500kb.png">
-</fire-webrtc>
+    firebaseCred="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4"
+    iceServer="https://sample-videos.com/img/Sample-png-image-500kb.png">
+</fire-rtc>
 </body>
 </html>
