--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
 <body>
 
   <fire-webrtc
-  
-    >
-</fire-rtc>
+  firebasecred= 'firebase api cred'
+  iceserver= 'ice servers candidates'
+>
+</fire-webrtc>
 </body>
 </html>
