--- a/test/index.html
+++ b/test/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-<fire-webrtc
-    src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4"
-    poster="https://sample-videos.com/img/Sample-png-image-500kb.png">
-</fire-webrtc>
+    <fire-webrtc
+    firebasecred= 'firebase api cred'
+    iceserver= 'ice servers candidates'
+  >
 </body>
 
 </html>
