--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-
   <script type="module" src="/build/fire-rtc.esm.js"></script>
   <script nomodule src="/build/fire-rtc.js"></script>
-
 </head>
 <body>
 
   <fire-webrtc
-  firebasecred= 'firebase api cred'
-  iceserver= 'ice servers candidates'
->
+    firebasecred= 'firebase credential in json'
+    iceserver='iceserver in json'
+  >
 </fire-webrtc>
 </body>
 </html>
