--- a/test/index.html
+++ b/test/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
 
-  <script type="module" src="https://unpkg.com/fire-webrtc@0.0.2/dist/fire-rtc/fire-rtc.esm.js"></script>
-  <script nomodule src="https://unpkg.com/fire-webrtc@0.0.2/dist/fire-rtc.js"></script>
+  <script type="module" src="https://unpkg.com/fire-webrtc@0.0.3/dist/fire-rtc/fire-rtc.esm.js"></script>
+  <script nomodule src="https://unpkg.com/fire-webrtc@0.0.3/dist/fire-rtc.js"></script>
 
 
 </head>
 
 <body>
     <fire-webrtc
-    firebasecred= 'firebase api cred'
-    iceserver= 'ice servers candidates'
+    firebasecred= 'firebase credentials json minified'
+    iceserver='ice server json minified'
   >
+</fire-webrtc>
 </body>
 
 </html>
